<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sansheng</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Index -->
    <string name="index_title">三生商务助手</string>
    <string name="company_advisory">公司咨询</string>
    <string name="achivevements_advisory">业务咨询</string>
    <string name="custom_mamager">客户管理</string>
    <string name="schedule_alert">日程管理</string>
    <string name="retail_bill">零售报单</string>
    <string name="bill_query">报单查询</string>
    <!-- schedule -->
    <string name="visit_remaind">拜访提醒</string>
    <string name="brithday_remaind">生日提醒</string>
    <string name="other_remaind">其他提醒</string>
    <string name="visit_custome">拜访客户</string>
    <string name="appoint_date">指定日期</string>
    <string name="finish">完成</string>
    <string name="title_schedule_edit">日程编辑</string>
    <string name="loading">正在载入中</string>
    <string name="alert">提示</string>

    <!-- schedule -->
    <string name="alert_please_warm_content">请输入提示内容</string>
    <string name="alert_please_select_custome">请选择一个客户</string>
    <string name="alert_please_select_date">请输入日期</string>
    <string name="btn_call">打电话</string>
    <string name="btn_sms">发短信</string>
    <string name="schedule_alert">日程提醒</string>
    <string name="schedule_edit">日程编辑</string>
    <string name="delete">删除</string>

</resources>